name:                natural

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.5.0
synopsis:            Type-level natural numbers
description:         Type-level natural numbers
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    Natural
  other-modules:
  default-extensions: FlexibleInstances
                    , ImportQualifiedPost
                    , NoImplicitPrelude
                    , TypeSynonymInstances
  build-depends:      base, base-unicode-symbols, text

                    , more-unicode >= 0.0.17.12

  hs-source-dirs:      src
  default-language:    Haskell2010

--------------------------------------------------------------------------------
