name:                natural

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.1.2
synopsis:            Type-level natural numbers
description:         Type-level natural numbers
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    Natural
                    , Natural.Abs
                    , Natural.AtMost
                    , Natural.BoundedError
                    , Natural.Countable
                    , Natural.Enum
                    , Natural.Length
                    , Natural.Nat
                    , Natural.Natty
                    , Natural.NumSign
                    , Natural.T.Natural
                    , Natural.Replicate
                    , Natural.Unsigned
  other-modules:
  default-extensions: ConstrainedClassMethods
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , ImportQualifiedPost
                    , InstanceSigs
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , ScopedTypeVariables
                    , RankNTypes
                    , TypeApplications
                    , TypeFamilies
                    , TypeSynonymInstances
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      base, base-unicode-symbols, bytestring, data-textual
                    , deepseq, lens, mtl, tasty, tasty-hunit, tasty-quickcheck
                    , text, text-printer

                    , base0t        >= 0.0.1.14
                    , has-callstack >= 1.0.2.0
                    , more-unicode  >= 0.0.23.0
                    , while         >= 0.0.0.1

  hs-source-dirs:      src
  default-language:    Haskell2010

-------------------------------------------------------------------------------

test-suite test
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  type:                exitcode-stdio-1.0
  main-is:             natural.hs
  hs-source-dirs:      t
  build-depends:       base, tasty

                     , natural
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

--------------------------------------------------------------------------------
